corrected scr to src misspelling in <a> tag for correct image display. wrapped up with landing page overall setup. still need to add content/text

--- a/WebVisualizations/assets/styles.css
+++ b/WebVisualizations/assets/styles.css
@@ -7,16 +7,42 @@ h1 {
 
 p {
     font-family: 'Arial';
+    text-align: justify;
+    font-size: medium;
 }
 
 img {
-    width: 25%;  
+    width: 40%;  
     opacity: 0.5;
 }
 
 img:hover {
-    width: 25%;  
+    /* width: 40%;   */
     opacity: 1.0;
+}
+
+/* row {
+    margin: 0px;
+} */
+
+a:link { 
+    text-decoration: none; 
+}
+
+a:visited { 
+    text-decoration: none; 
+}
+
+a:hover { 
+    text-decoration: none; 
+}
+
+a:active { 
+    text-decoration: none; 
+}
+
+nav ul li {
+    display: inline-block;
 }
 
 /* -------------- Style classes --------------- */
@@ -38,10 +64,6 @@ img:hover {
     
 }
 
-#greybg {
-    background-color: lightgrey;
-}
-
 .col-4 {
     background-color: white;
     /* width: fit-content; */
@@ -51,7 +73,6 @@ img:hover {
     align-items: center; */
     margin: 10px;
     padding: 30px;
-    padding-left: 60px;
 }
 
 .col-7 {
@@ -65,7 +86,6 @@ img:hover {
     padding: 10px; */
     margin: 10px;
     padding: 30px;
-    padding-left: 60px;
 }
 
 .nav-item {
@@ -84,17 +104,12 @@ img:hover {
     justify-content: space-between;
 }
 
-a {
-    text-decoration: none;
+.nav-link {
+    color: rgb(27, 27, 27);
 }
 
-/* ul {
-    margin-top: 5%;
-    margin-left: 90%;
-} */
-
-nav ul li {
-    display: inline-block;
+.nav-link:hover {
+    color: #4aaaa5;
 }
 
 .container {
@@ -105,6 +120,10 @@ nav ul li {
 }
 
 /* -------------- Style IDs ---------------- */
+#greybg {
+    background-color: lightgrey;
+}
+
 #tealtext {
     color: #4aaaa5;
     font-weight: 900;
